[package]
name = "PID_Scanner"
version = "0.1.0"
edition = "2024"


[dependencies]
sysinfo = "0.38.4"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",      
    "Win32_System_Threading",       
    "Win32_System_Memory",               
    "Win32_System_Diagnostics_ToolHelp"  
] }